@@ -78,6 +78,7 @@ Bug fixes
  * Generate URL for the current site when multiple sites share the same root page (Codie Roelf)
  * Restored ability to use non-model fields with FieldPanel (Matt Westcott, LB (Ben Johnston))
  * Stop revision comparison view from crashing when non-model FieldPanels are in use (LB (Ben Johnston))
+ * Ordering in the page explorer now respects custom ``get_admin_display_title`` methods when sorting <100 pages (Matt Westcott)
 
 
 Upgrade considerations
